--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lynk Music</title>
+    <link rel="icon" type="image/x-icon" href="favicon-32x32.png">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="istdiv">
+        <div>
+            <img class="image" src="illustration-hero.svg" alt="hero" width="400px">
+        </div>
+        <div class="secdiv">
+            <h3 class="heading">Order Summary</h3>
+        </div>
+        <div class="para">
+            <p>
+                You can now listen to millions of songs, audiobooks, and podcasts on any device <span class="text">anywhere you like!</span>
+            </p>
+        </div>
+        <div class="thirddiv">
+            <div class="istsection">
+                <img class="iconmusic" src="icon-music.svg" alt="iconmusic">
+            </div>
+            <div class="secsection">
+                <h3 class="plan">Annual Plan</h3>
+                <p class="dollar">$59.99/year</p>
+            </div>
+            <div class="thirdsection">
+                <a class="change" href="">Change</a>
+            </div>
+        </div>
+        <div class="fourthdiv">
+            <a class="istbutton" href="">Proceed to Payment</a>
+            <a class="secbutton" href="">Cancel Order</a>
+        </div>
+    </div>
+</body>
+</html>
